--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "triplanner",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/triPlanner.js",
+  "main": "dist/triPlanner.js",
   "module": "dist/triPlanner.js",
   "directories": {
     "start": "src",
@@ -18,6 +18,7 @@
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "moment": "^2.24.0",
+    "npm": "^6.9.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-google-maps": "^9.4.5",
