Getting Google Maps Object, removing dependency on google-maps-react library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "strict": false,
         "allowJs": false,
         "declaration": true,
-        "experimentalDecorators" : true
+        "experimentalDecorators" : true,
     },
     "allowSyntheticDefaultImports" : false,
     "include": [
