--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "private": true,
   "dependencies": {
+    "@types/googlemaps": "^3.36.2",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
     "mobx": "^5.9.0",
@@ -21,7 +22,6 @@
     "npm": "^6.9.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-google-maps": "^9.4.5",
     "tslint": "^5.10.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
